--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     display: flex;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 10%;
 }
 .header-part{
     width: 50%;
@@ -19,10 +20,25 @@ body{
     text-decoration: none;
     background-image: linear-gradient(red,yellow);
     border-radius: 10px;
+    color: #fff;
 }
 h1{
     font-size: 50px;
 }
 .header-part img{
     width: 100%;
+}
+#drear-area{
+    display: flex;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.dream-part{
+    width: 50%;
+    padding-right: 5%;
+}
+.dream-part img{
+    width: 100%;
+
 }
