--- a/style.css
+++ b/style.css
@@ -42,3 +42,32 @@ h1{
     width: 100%;
 
 }
+#ex-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    padding: 5%;
+}
+.ex-area-part{
+    display: flex;
+}
+.ex-area-part h3{
+    color: orange;
+}
+.ex-area-part div{
+    box-shadow: 5px 7px 40px gray;
+    height: 80%;
+    margin: 15px;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,red,tomato);
+    border-image-slice: 1;
+    padding: 10px;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,blue,cyan);
+    border-image-slice: 1;
+    padding: 10px;
+}
